Add fixity preservation evidence
